@@ -620,6 +620,12 @@ static ZEND_FUNCTION(zend_test_fill_packed_array)
 	} ZEND_HASH_FILL_END();
 }
 
+static ZEND_FUNCTION(get_open_basedir)
+{
+	ZEND_PARSE_PARAMETERS_NONE();
+	RETURN_STRING(PG(open_basedir));
+}
+
 static zend_object *zend_test_class_new(zend_class_entry *class_type)
 {
 	zend_object *obj = zend_objects_new(class_type);
