@@ -38,6 +38,7 @@
 #include "ext/standard/php_standard.h"
 #include "zend_compile.h"
 #include "php_network.h"
+#include "zend_smart_str.h"
 
 #if HAVE_PWD_H
 #include <pwd.h>
@@ -81,19 +82,13 @@ PHPAPI ZEND_INI_MH(OnUpdateBaseDir)
 		return SUCCESS;
 	}
 
-	/* Otherwise we're in runtime */
-	if (!*p || !**p) {
-		/* open_basedir not set yet, go ahead and give it a value */
-		*p = ZSTR_VAL(new_value);
-		return SUCCESS;
-	}
-
 	/* Shortcut: When we have a open_basedir and someone tries to unset, we know it'll fail */
 	if (!new_value || !*ZSTR_VAL(new_value)) {
 		return FAILURE;
 	}
 
 	/* Is the proposed open_basedir at least as restrictive as the current setting? */
+	smart_str buf = {0};
 	ptr = pathbuf = estrdup(ZSTR_VAL(new_value));
 	while (ptr && *ptr) {
 		end = strchr(ptr, DEFAULT_DIR_SEPARATOR);
@@ -101,40 +96,37 @@ PHPAPI ZEND_INI_MH(OnUpdateBaseDir)
 			*end = '\0';
 			end++;
 		}
-		/* Don't allow paths with a parent dir component (..) to be set at runtime */
-		char *substr_pos = ptr;
-		while (*substr_pos) {
-			// Check if we have a .. path component
-			if (substr_pos[0] == '.'
-			 && substr_pos[1] == '.'
-			 && (substr_pos[2] == '\0' || IS_SLASH(substr_pos[2]))) {
-				efree(pathbuf);
-				return FAILURE;
-			}
-			// Skip to the next path component
-			while (true) {
-				substr_pos++;
-				if (*substr_pos == '\0' || *substr_pos == DEFAULT_DIR_SEPARATOR) {
-					goto no_parent_dir_component;
-				} else if (IS_SLASH(*substr_pos)) {
-					// Also skip the slash
-					substr_pos++;
-					break;
-				}
-			}
-		}
-no_parent_dir_component:
-		if (php_check_open_basedir_ex(ptr, 0) != 0) {
-			/* At least one portion of this open_basedir is less restrictive than the prior one, FAIL */
+		char resolved_name[MAXPATHLEN + 1];
+		if (expand_filepath(ptr, resolved_name) == NULL) {
 			efree(pathbuf);
+			smart_str_free(&buf);
 			return FAILURE;
 		}
+		if (php_check_open_basedir_ex(resolved_name, 0) != 0) {
+			/* At least one portion of this open_basedir is less restrictive than the prior one, FAIL */
+			efree(pathbuf);
+			smart_str_free(&buf);
+			return FAILURE;
+		}
+		if (smart_str_get_len(&buf) != 0) {
+			smart_str_appendc(&buf, DEFAULT_DIR_SEPARATOR);
+		}
+		smart_str_appends(&buf, resolved_name);
 		ptr = end;
 	}
 	efree(pathbuf);
 
 	/* Everything checks out, set it */
-	*p = ZSTR_VAL(new_value);
+	if (*p) {
+		/* Unfortunately entry->modified has already been set to true so we compare entry->value
+		 * against entry->orig_value. */
+		if (entry->modified && entry->value != entry->orig_value) {
+			efree(*p);
+		}
+	}
+	zend_string *tmp = smart_str_extract(&buf);
+	*p = estrdup(ZSTR_VAL(tmp));
+	zend_string_release(tmp);
 
 	return SUCCESS;
 }
